--- a/css/style-inicio.css
+++ b/css/style-inicio.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 
-
 * {
     margin: 0;
     padding: 0;
@@ -13,7 +12,6 @@ body {
     height: 100vh;
     width: 100%;
 }
-
 
 /*Barra de Navegação - Parte de cima do Ingressa*/
 header {
@@ -36,7 +34,7 @@ header {
     gap: 90px;
 }
 
-.nav-ingressa nav ul li a{
+.nav-ingressa nav ul li a {
     color: black;
     text-decoration: none;
 }
@@ -80,4 +78,95 @@ input[type="search"] {
     color: #F85F1C;
     font-size: 35px;
 }
+
 /*Barra de Navegação - FINAL*/
+
+
+/*INICIO DOS CARDS, TITULO E CARDS!*/
+#cards {
+    padding-top: 65px;
+    margin-left: 136px;
+    margin-right: 120px;
+    height: 100vh;
+}
+
+.cards-tittle-description {
+    padding-bottom: 40px;
+    width: 100%;
+}
+
+.tittle-inicio {
+    color: #F85F1C;
+}
+
+.text-inicio {
+    color: black;
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+
+/*TITULO E DESCRIÇÃO FECHAM AQUI*/
+
+
+/*INICIO DOS CARDS DE SHOWS/EVENTOS */
+#cards-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 35px;
+    border-radius: 10px;
+    width: 390px;
+    height: 565px;
+    background-color: #e2e2e258;
+}
+
+#cards-content img {
+    height: 320px;
+    width: 320px;
+    border-radius: 10px;
+    object-fit: cover;
+    padding-bottom: 0.70rem;
+}
+
+.title-card {
+    color: #F85F1C;
+    font-size: 1.15rem;
+    font-weight: 400;
+}
+
+.description-card {
+    color: black;
+    font-size: 1rem;
+    font-weight: 400;
+    text-align: justify;
+}
+
+.cards-information {
+    display: flex;
+    margin-top: 1.5rem;
+    align-items: end;
+    gap: 70px; 
+}
+
+.cards-dayweek {
+    color: #6A6A6A;
+    font-weight: 400;
+    font-size: 1.15rem;
+}
+
+.cards-date {
+    color: #F85F1C;
+    font-weight: 400;
+    font-size: 1.10rem;
+}
+
+.cards-ingresso button {
+    color: white;
+    background-color: #F85F1C;
+    border: none;
+    font-size: 1rem;
+    font-weight: 200;
+    padding: 6px;
+    width: 120px;
+    border-radius: 20px;
+}
