--- a/css/style-inicio.css
+++ b/css/style-inicio.css
@@ -83,11 +83,10 @@ input[type="search"] {
 
 
 /*INICIO DOS CARDS, TITULO E CARDS!*/
-#cards {
+#shows-description {
     padding-top: 65px;
     margin-left: 136px;
     margin-right: 120px;
-    height: 100vh;
 }
 
 .cards-tittle-description {
@@ -109,44 +108,78 @@ input[type="search"] {
 
 
 /*INICIO DOS CARDS DE SHOWS/EVENTOS */
-#cards-content {
+#cards {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 35px;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin-left: 136px;
+    margin-right: 120px;
+}
+
+#cards-content {
+    padding: 15px;
     border-radius: 10px;
     width: 350px;
     height: 630px;
     background-color: #e2e2e258;
 }
 
+
+.cards-junction {
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #cards-content img {
     height: 320px;
     width: 320px;
     border-radius: 10px;
     object-fit: cover;
-    padding-bottom: 0.70rem;
+    margin-bottom: 10px;
 }
 
 .title-card {
     color: #F85F1C;
-    font-size: 1.15rem;
-    font-weight: 400;
+    font-size: 1.20rem;
+    font-weight: 600;
 }
 
 .description-card {
     color: black;
-    font-size: 1rem;
-    margin-top: 0.25rem;
+    font-size: 1.1rem;
+    margin-top: 0.30rem;
     font-weight: 400;
     text-align: justify;
 }
 
 .cards-information {
     display: flex;
-    margin-top: 3rem;
+    justify-content: space-between;
     align-items: end;
-    gap: 50px; 
+    position: relative;
+    bottom: 1;
+
+
+
+
+
+
 }
 
 .cards-dayweek {
@@ -165,16 +198,12 @@ input[type="search"] {
     color: white;
     background-color: #F85F1C;
     border: none;
+    border-radius: 20px;
     font-size: 0.95rem;
     font-weight: 200;
     padding: 5px;
     width: 100px;
-    border-radius: 20px;
+    cursor: pointer;
 }
 
 /*CARDS JUNTOS, NÃO MEXER!*/
-.cards-junction {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
