adição de html - (mostrar evento) e (cadastrar admin), correção de códigos e bugs

--- a/css/style-infoevento.css
+++ b/css/style-infoevento.css
@@ -87,8 +87,8 @@ input[type="search"] {
     flex-direction: column;
     text-align: left;
     margin-left: 136px;
-    padding-top: 65px;
-    padding-bottom: 60px;
+    padding-top: 75px;
+    padding-bottom: 40px;
 }
 
 .tittle-text-events h1 {
@@ -103,6 +103,111 @@ input[type="search"] {
 
 /*Titulo e Descrição - FINAL*/
 
+
+
+/*Informações do Evento, Título...*/
 #infos-evento {
-    height: 100vh;
+    margin-left: 136px;
+    font-weight: 500;
+    font-size: 20px;
+}
+
+#ingressos-carrinho {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-top: 50px;
+    margin-left: 136px;
+}
+
+.ingressos-valor {
+    width: 490px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.ingresso-tittle {
+    background-color: #F85F1C;
+    color: white;
+    font-weight: 500;
+    font-size: 25px;
+    border-radius: 13px 13px 0px 0px;
+    padding: 10px;
+    border: 3px solid #F85F1C;
+
+}
+
+.ingresso-valor {
+    font-size: 25px;
+    font-weight: bolder;
+    border-radius: 0px 0px 13px 13px;
+    padding: 15px;
+    border: 1.5px solid #C0C0C0;
+}
+
+.adc-carrinho {
+    text-align: center;
+    color: white;
+}
+
+.carrinho {
+    text-align: center;
+    padding: 16px;
+    width: 490px;
+    font-weight: 500;
+    font-size: 25px;
+    border-radius: 13px;
+    background-color: #F85F1C;
+    cursor: pointer;
+}
+/*Informações do Evento, Título... - FINAL*/
+
+#events-banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#foto-banner img {
+    margin-top: 75px;
+    margin-right: 120px;
+    margin-left: 80px;
+    border-radius: 15px;
+    border: 1.5px solid #F85F1C;
+    max-width: 650px;
+    max-height: 650px;
+}
+
+
+
+
+
+
+
+
+
+
+.info-event {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-top: 1.5px solid #C0C0C0;
+    border-bottom: 1.5px solid #C0C0C0;
+    padding: 20px;
+    gap: 12px;
+}
+
+.infos-icone {
+    display: flex;
+    text-align: center;
+    gap: 10px;
+}
+
+.infos-icone i {
+    color: #F85F1C;
+    font-size: 22px;
+}
+
+.text-info {
+    font-size: 20px;
 }
