--- a/css/style-carrinho.css
+++ b/css/style-carrinho.css
@@ -78,3 +78,102 @@ input[type="search"] {
     color: #F85F1C;
     font-size: 35px;
 }
+
+/*TITULO E DESCRIÇÃO*/
+.cards-tittle-description {
+    padding-top: 65px;
+    margin-left: 136px;
+    margin-right: 120px;
+    padding-bottom: 40px;
+}
+
+.tittle-inicio {
+    color: #F85F1C;
+}
+
+.text-inicio {
+    color: black;
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+
+/*FIM DO TITULO E DESCRIÇÃO*/
+
+/*CARRINHO*/
+.carrinho-compra {
+    display: flex;
+    justify-content: space-between;
+    gap: 18rem;
+}
+
+/*INICIO DA TABELA*/
+.tabela-ingresso {
+    display: flex;
+    margin-top: 50px;
+    margin-left: 136px;
+    padding-bottom: 7px;
+    font-size: 1.2rem;
+    font-weight: 400;
+    border-bottom: 2px solid rgb(235, 235, 235);
+}
+
+.teste-tabela {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 160px;
+}
+
+/*FIM DA TABELA*/
+
+
+
+/*CARD DE PAGAMENTO NA DIREITA*/
+.pagamento-ingresso {
+    width: 100%;
+    height: 475px;
+    margin-top: 50px;
+    margin-right: 150px;
+    background-color: rgb(235, 235, 235);
+    border-radius: 18px;
+    padding: 1.3rem;
+    text-align: center;
+}
+
+.title-carrinho {
+    font-size: 1.25rem;
+}
+
+.options-valores {
+    display: flex;
+    margin-top: 50px;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.list-option {
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.25rem;
+}
+
+.option-valores2 {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.25rem;
+    margin-top: 50px;
+    border-top: 2px solid black;
+    padding-top: 10px;
+    gap: 40px;
+}
+
+button[type="submit"] {
+    font-size: 1.1rem;
+    outline: none;
+    border: none;
+    background-color: #F85F1C;
+    border-radius: 10px;
+    color: white;
+    width: 320px;
+    height: 45px;
+}
