--- a/css/style-carrinho.css
+++ b/css/style-carrinho.css
@@ -112,12 +112,13 @@ input[type="search"] {
     justify-content: flex-start;
     flex-direction: column;
     margin-left: 136px;
+    gap: 15px;
 }
 
 .ingresso-linha {
     display: flex;
-    border: 1px solid #F85F1C;
-    background-color: rgb(243, 243, 243);
+    border-radius: 0px 10px 10px 0px;
+    background-color: rgb(250, 250, 250);
     width: 800px;
     align-items: center;
     gap: 55px;
@@ -148,7 +149,7 @@ input[type="search"] {
 .pagamento-ingresso {
     height: 340px;
     margin-right: 150px;
-    background-color: rgb(243, 243, 243);
+    background-color: rgb(250, 250, 250);
     border-radius: 18px;
     padding: 1.3rem;
     border: 1px solid #F85F1C;
