--- a/css/style-inicio-admin.css
+++ b/css/style-inicio-admin.css
@@ -32,7 +32,6 @@ header {
     list-style: none;
     font-size: 1.3rem;
     gap: 90px;
-
 }
 
 .nav-ingressa nav ul li a {
@@ -44,23 +43,6 @@ header {
     max-width: 180px;
     max-height: 180px;
     object-fit: cover;
-}
-
-
-.search-bar i {
-    margin-right: 0.20rem;
-    font-size: 14px;
-    color: #F85F1C;
-}
-
-input[type="search"] {
-    border: none;
-    outline: none;
-    font-size: 18px;
-    font-weight: 350;
-    width: 100%;
-    padding: 12px;
-    max-width: 100%;
 }
 
 .profile-icon a {
@@ -93,6 +75,7 @@ input[type="search"] {
     font-size: 1.2rem;
     font-weight: 400;
 }
+
 /*FIM TITULO E DESCRIÇÃO*/
 
 
@@ -101,30 +84,109 @@ input[type="search"] {
 #cards-cima {
     display: flex;
     justify-content: flex-start;
-    gap: 40px;
+    gap: 35px;
+    margin-left: 136px;
+    margin-top: 15px;
+}
+
+.card-eventos-criados {
+    width: 500px;
+    height: 250px;
+    padding: 20px;
+    border-radius: 15px;
+    background-color: #f1f1f1;
+    border: 1px solid #F85F1C;
+}
+
+.card-eventos-criados strong {
+    font-size: 22px;
+    color: #000000;
+}
+
+.card-eventos-criados p {
+    font-size: 30px;
+    color: #000000;
+}
+
+.cadastrar-evento {
+    margin-right: 120px;
+    border: 1px solid #F85F1C;
+    border-radius: 15px;
+    padding: 30px;
+}
+
+.cadastrar-evento strong {
+    font-size: 1.5rem;
+    color: #F85F1C;
+}
+
+.cadastrar-evento p {
+    margin-top: 2px;
+    font-size: 1.2rem;
+    text-align: justify;
+}
+
+.btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    height: 50px;
+    width: 300px;
+    margin-top: 25px;
+    color: white;
+    cursor: pointer;
+    border: none;
+    border-radius: 15px;
+    font-size: 22px;
+    background-color: #F85F1C;
+}
+
+
+#cards-crud {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 60px;
     margin-left: 136px;
     margin-right: 120px;
 }
 
-.card-eventos-criados {
-    width: 275px;
-    height: 275px;
-    padding: 20px;
-    background-color: antiquewhite;
-}
-
-.card-eventos-criados strong {
-    font-size: 25px;
-    letter-spacing: 1px;
-}
-
-.card-eventos-criados p {
-    font-size: 20px;
-}
-
-.crud-evento{
+.crud-evento {
     display: flex;
+    justify-content: space-between;
+    gap: 25px;
+    width: 100%;
+    height: 110px;
+    padding: 12px;
+    border-radius: 15px;
+    background-color: #f1f1f1;
+    align-items: center;
+    border: 1px solid #F85F1C;
 
 }
 
+.evento-cardzinho {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
 
+.evento-cardzinho p{
+    font-size: 20px;
+    margin-left: 10px;
+}
+
+.crud-evento img {
+    width: 85px;
+    height: 85px;
+    border-radius: 15px;
+}
+
+.icones {
+    display: flex;
+    gap: 15px;
+    margin-right: 10px;
+    font-size: 25px;
+    color: #F85F1C;
+}
